--- a/index.css
+++ b/index.css
@@ -13,11 +13,13 @@ body {
   margin: 0 auto;
   padding: 20px;
   width: 550px;
+  height: 400px;
   background-image: url("images/table.png");
   background-size: cover;
 }
 
 h1 {
+  margin-top: 60px;
   color: goldenrod;
 }
 
